# sanOmni

./: .antigravityrules  .cursorrules  .env.prompt  .gitignore  .npmrc  AI图片管理系统-完整落地方案.md  CHANGELOG.md  CROSS_PLATFORM.md  FOLDER_MONITORING_COMPLETE.md  IMPLEMENTATION_CHECKLIST.md  PROGRESS.md  README.md  USAGE.md  VENDOR_MANAGEMENT_README.md  VENDOR_MANAGEMENT_SUMMARY.md  components.json  extract_settings.cjs  fix_extract.cjs  fix_extract2.cjs  fix_extract3.cjs  fix_extract4.cjs  fix_works.cjs  fix_works2.cjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  releases.json  releases_v1.0.4.json  sanOmni.code-workspace  tailwind.config.js  temp_settings.tsx  test.js  test.rs  test_detect.rs  test_image.rs  update.cjs  update_view.py  vite.config.ts
.antigravitycli/: ed05dce1-036d-4476-ae4c-70762968edb3.json  rules.md
docs/: AI图片管理系统-完整落地方案.md  ARCHITECTURE.md  BUG_FIX_LOG.md  CHANGELOG_2026-05-20.md  CHANGELOG_2026-05-21_PROMPT_COMPARISON.md  CHANGELOG_2026-06-01_UNIFIED_ROOT.md  CHANGELOG_2026-06-02_DIRECTORY_MIGRATION_REPAIR.md  CHANGELOG_2026-06-08_SYNC_FEATURE.md  CHANGELOG_2026-06-09_PATH_IMMUTABILITY.md  CLEANUP_SUMMARY.md  CROSS_PLATFORM.md  CUSTOM_STORAGE_PATH.md  DATA_PERSISTENCE.md  DELETE_FEATURE.md  DOCUMENTATION_ORGANIZATION.md  DOUBAO_WATERMARK_REMOVAL.md  DOUBAO_WATERMARK_SUMMARY.md  FOLDER_MONITORING.md  FOLDER_MONITORING_COMPLETE.md  IMAGE_VIEWER.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  IP_WORKS_COLLECTION.md  LAB_IMAGE_SLICER.md  LAB_PRODUCT_IMAGE_MAKER.md  ON_DEMAND_PACKAGING.md  OPEN_FOLDER_AND_ARCHIVE.md  PLATFORM_FIXES.md  PROGRESS.md  PROMPT_COMPARISON.md  PROMPT_COMPARISON_IMPLEMENTATION.md  PROMPT_COMPARISON_QUICKSTART.md  PROMPT_COMPARISON_SUMMARY.md  PROMPT_COMPARISON_UPDATES.md  PROMPT_FILTER_FEATURE.md  PROMPT_FILTER_UPDATE.md  QUICK_START_VENDOR_MANAGEMENT.md  README_CONSOLIDATION.md  READY_TO_TEST.md  START_TESTING.md  (+19 more)
scratch/: add_platform.py  analyze_doubao.rs  analyze_doubao_watermark.py  archive_emojis.py  extract_vendors.cjs  fix_delete_model_cascade.cjs  import_emojis.py  import_qiushoudong.py  patch.py  patch2.py  refactor_settings.cjs  rename_docs.py  scanner_append.rs  test_doubao_removal.md  update_vendors.cjs  update_vendors_view.cjs
scripts/: build-for-tauri.mjs  build_engine.ps1  dev-with-ip.cjs  ensure-vite-for-tauri.mjs  fix_links.mjs  perfect_matting.py  perfect_matting.spec  pillow_matting.py  pillow_matting.spec  (+3 more)
src-tauri/: Cargo.toml  out.json  out2.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: doubao_watermark_probe.rs  test_insert.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  test.rs
src-tauri/src/commands/: characters.rs  classifier.rs  engine.rs  fs.rs  gemini_watermark_removal.rs  images.rs  ip_assets.rs  ip_images.rs  mod.rs  prompt_groups.rs  scanner.rs  settings.rs  sync_commands.rs  tags.rs  updater.rs  vendors.rs  watcher.rs  watermark.rs  watermark_removal.rs  works.rs
src-tauri/src/database/: mod.rs
src-tauri/src/models/: ip_assets.rs  mod.rs
src-tauri/src/sync/: client.rs  engine.rs  mod.rs  triggers.rs
(+169 files in other folders)
