[package]
name = "ai-image-manager"
version = "0.1.0"
description = "AI Image Manager - Manage AI-generated images"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_image_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
image = "0.25"
notify = "7"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
