[package]
name = "sanomni"
version = "1.2.4"
description = "sanOmni - Manage AI-generated images"
authors = ["you"]
edition = "2021"
default-run = "sanomni"
autobins = false

[[bin]]
name = "sanomni"
path = "src/main.rs"

[lib]
name = "sanomni_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4"] }
open = "5.1.2"
keyring = "2"
sha2 = "0.10"
hex = "0.4"
image = "0.25"
notify = "7"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
semver = "1"
thiserror = "1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

# Reduce memory usage during compilation
[profile.dev]
opt-level = 0
incremental = true
codegen-units = 512
debug = 0

[profile.dev.package."*"]
opt-level = 0
debug = 0
